fixed achievement list overlap in mob view

--- a/assets/css/about_us3.css
+++ b/assets/css/about_us3.css
@@ -44,17 +44,33 @@
 .achievement_list_wrapper {
     padding-top: 15px;
 }
+.achievement_list_wrapper .list_no_wrap{
+    display: flex;
+    align-items: top;
+    justify-content: center;
+}
 .achievement_list_wrapper .list_no{
     border: none;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: lightgrey;
+    text-align: center;
+    padding: 15px;
 }
-.achievement_list_wrapper .list_content{
+.achievement_list_wrapper .list_content p{
     font-size: 16px;
     font-style: italic;
-    height: 100px;
+    color: #222222;
+    min-height: 100px;
+    padding-bottom: 20px;
 }
+
 .int_about_section2 .about_contentbox {
     padding: 0;
-    padding-left: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .about_content{
     padding-bottom: 40px;
@@ -119,12 +135,12 @@
 }
 
 
-.list_no_wrap{
+.int_mission_vision_wrapper .list_no_wrap{
     display: flex;
     align-items: top;
     justify-content: center;
 }
-.list_no{
+.int_mission_vision_wrapper .list_no{
     border: none;
     color: white;
     width: 50px;
@@ -134,7 +150,7 @@
     text-align: center;
     padding: 15px;
 }
-.list_content p{
+.int_mission_vision_wrapper .list_content p{
     font-size: 16px;
     font-style: italic;
     color: #222222;
@@ -217,6 +233,9 @@
 
 
 @media(max-width: 992px){
+    *{
+        height: auto;
+    }
     .vision_image_wrapper{
         padding-top: 50px;
     }
